# RETRO-Ollama

./: Dockerfile  OBJECTIVES.md  README.md  history.json  main.py  mode.json  pyproject.toml  requirements.txt
cve_data/: README.txt
sessions/: README.txt
src/: __init__.py  async_utils.py  cache.py  cli_app.py  cli_theme.py  exceptions.py  health.py  i18n.py  logging_config.py  metrics.py  ollama_client.py  plugins.py  project_types.py  validators.py
src/ai/: agent.py  prompts.py  skills.py  workflows.py
src/ai/backends/: multi_backend.py
src/cache/: shodan_40ff44d9e619b17524bf3763204f9cbb.json  virustotal_5ababd603b22780302dd8d83498e5172.json
src/cli/: __init__.py  base.py  commands.py  handlers.py
src/cli_commands/: parsers.py  scan_commands.py
src/cli_commands/commands/: __init__.py  osint.py  scan.py
src/config/: __init__.py  config.py  settings.py
src/modes/: __init__.py  mode_manager.py  prompts.py
src/output/scripts/: codigo_escaneo_con.txt  generame_codigo_post.sh  generame_payload_windows.ps1  payload_payload_windows.py
src/reports/: generator.py
src/tools/: analyzer.py  apis.py  async_scanner.py  automation.py  code_samples.py  compliance.py  cve.py  demo_mode.py  dependency_scanner.py  history.py  incident_response.py  metrics.py  pentest.py  rate_limit.py  security.py  sessions.py  stealth.py  system.py  threat_intel.py  utils.py  vuln_db.py  wordlists.py
tests/: test_analyzer.py  test_apis.py  test_async.py  test_backends.py  test_cache.py  test_code_samples.py  test_commands.py  test_compliance.py  test_core.py  test_health.py  test_i18n.py  test_incident_response.py  test_intents.py  test_metrics.py  test_modes.py  test_ollama.py  test_pentest.py  test_rate_limit.py  test_security.py  test_threat_intel.py  test_types.py  test_utils.py  test_validators.py  test_wordlists.py
